# wispy

./: README.md
callbacks2/: Cargo.toml
callbacks2/circom-poseidon/: Cargo.toml  constants.py  gen_constants.py  gen_rs.py
callbacks2/circom-poseidon/src/: lib.rs
callbacks2/examples/: check_circposeidon.rs  folding.rs  simple.rs
callbacks2/src/: lib.rs  util.rs
callbacks2/src/crypto/: enc.rs  hash.rs  mod.rs  rr.rs
callbacks2/src/generic/: bulletin.rs  callbacks.rs  fold.rs  interaction.rs  mod.rs  object.rs  scan.rs  service.rs  user.rs
callbacks2/src/generic/asynchr/: bulletin.rs  mod.rs  service.rs
callbacks2/src/impls/: dummy.rs  hash.rs  mod.rs  userdata.rs
callbacks2/src/impls/centralized/: crypto.rs  mod.rs
callbacks2/src/impls/centralized/ds/: mod.rs  sigrange.rs  sigstore.rs
callbacks2/src/impls/centralized/ds/sig/: bls377_schnorr.rs  gr_schnorr.rs  jj_schnorr.rs  mod.rs  uov.rs
callbacks2/src/impls/decentralized/: crypto.rs  mod.rs
callbacks2/src/impls/decentralized/ds/: mod.rs
callbacks2/zk-object/: Cargo.toml
callbacks2/zk-object/src/: lib.rs
signal-cli/: Cargo.toml  README.md  experiment_analysis.ipynb  script.py  timing_log.json  zk_timings_stats.csv  zk_timings_summary.csv
signal-cli/client/: Cargo.toml  contexts.jsonl  pseudo_log.jsonl  timing_gen_cb_for_msg.json
signal-cli/client/src/: helpers.rs  main.rs  parse.rs
signal-cli/client/timing_tmp/: 3.start
signal-cli/common/: Cargo.toml
signal-cli/common/src/: zk.rs
signal-cli/experiment_results/: timing_log.json  zk_timings_stats.csv  zk_timings_summary.csv
signal-cli/experiments/: ban_rep_timings_stats.csv  ban_rep_timings_summary.csv  call_cb_timings_stats.csv  core_timings_stats.csv  core_timings_summary.csv  epoch_timings_summary.csv  features_timings_stats.csv  features_timings_summary.csv  latency_features_timings_stats.csv  latency_features_timings_summary.csv  rep_timings_stats.csv  rep_timings_summary.csv  timing_log.json  verify_features_timings_stats.csv  verify_features_timings_summary.csv
signal-cli/experiments/ban_rep_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  means_with_error.pgf  trend.pgf
signal-cli/experiments/call_cb_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf
signal-cli/experiments/core_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  means_with_error.pgf  trend.pgf  violinplot.pgf
signal-cli/experiments/epoch_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf
signal-cli/experiments/features_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf  violinplot.pgf
signal-cli/experiments/latency_features_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf  violinplot.pgf
signal-cli/experiments/rep_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf
signal-cli/experiments/verify_features_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf
signal-cli/json_files/1/: timings.jsonl
signal-cli/json_files/2/: timings.jsonl
signal-cli/json_files/3/: start_time.json  timing_3_05-20T.json  timings.jsonl
signal-cli/json_files/author/: features_timings.jsonl  start_time.json  timings.jsonl  verify_timings.jsonl
signal-cli/json_files/badge/: features_timings.jsonl  start_time.json  timings.jsonl  verify_timings.jsonl
signal-cli/json_files/ban/: features_timings.jsonl
signal-cli/json_files/pseudo_msg/: features_timings.jsonl  start_time.json  timings.jsonl  verify_timings.jsonl
signal-cli/json_files/pseudo_vote/: features_timings.jsonl  start_time.json  timings.jsonl  verify_timings.jsonl
signal-cli/json_files/rate_pseudo/: features_timings.jsonl  start_time.json  timings.jsonl  verify_timings.jsonl
signal-cli/json_files/rep/: call_timings.jsonl  epoch_timings.jsonl  features_timings.jsonl
signal-cli/old_experiments/experiments/: ban_rep_timings_stats.csv  ban_rep_timings_summary.csv  call_cb_timings_summary.csv  epoch_timings_stats.csv  features_timings_stats.csv  features_timings_summary.csv  latency_features_timings_stats.csv  latency_features_timings_summary.csv  rep_timings_stats.csv  rep_timings_summary.csv  timing_log.json  verify_features_timings_stats.csv  verify_features_timings_summary.csv
signal-cli/old_experiments/experiments/ban_rep_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf  violinplot.pgf
signal-cli/old_experiments/experiments/call_cb_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf
signal-cli/old_experiments/experiments/epoch_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  kde.pgf  means_with_error.pgf  trend.pgf
signal-cli/old_experiments/experiments/features_plots/: boxplot.pgf  cdf.pgf  histogram.pgf  (+3 more)
signal-cli/server/: zkpair_log.jsonl
signal-cli/server/json_files/: timing_gen_cb_for_msg_05-20T.json
signal-cli/server/src/: helpers.rs  main.rs  server.rs
wispy/: SIGNALCLI.md
wispy-signal-cli/: .gitignore  EXAMPLES.md
wispy-signal-cli/client/: Cargo.toml
wispy-signal-cli/client/src/: bul.rs  helpers.rs  parse.rs
wispy-signal-cli/common/: Cargo.toml
wispy-signal-cli/common/src/: lib.rs  main.rs  zk.rs
wispy-signal-cli/server/: Cargo.toml
wispy/client/: Cargo.toml
wispy/client/src/: lib.rs  main.rs  simple_example.rs
wispy/server/: Cargo.toml
wispy/server/src/: helpers.rs  main.rs  server.rs
(+46 files in other folders)
