[package]
name = "circom_poseidon"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Kotliarov"]

[dependencies]
ark-ff = { version = "=0.5.0", default-features = false, features = ["parallel", "asm"] }
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
serde_json = "1.0.117"
serde = "1.0.201"
num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }
ark-groth16 = "0.5.0"
ark-snark = "0.5.0"
rand = "0.8.5"
ark-crypto-primitives = { version = "0.5.0", features = ["crh", "sponge"] }
