[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = { version = "0.5.0", features = ["ark-serialize-derive", "derive"] }
rand = "0.8.5"
# zk-callbacks = { path = "/Users/oliwiakempinski/Documents/GitHub/callbacks" }
# zk-callbacks = { path = "/Users/rachelthomas/Documents/Anon_Group_Chat/callbacks" }
zk-callbacks = { path = "../../callbacks2" }
ark-snark = "0.5.0" 
ark-crypto-primitives = "0.5.0"
ark-std = "0.5.0"
